--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'main', url: 'https://github.com/senthanamudhank/devops-build.git'
+                git branch: 'dev', url: 'https://github.com/senthanamudhank/devops-build.git'
             }
         }
         stage('Build Docker Image') {
